# ML-Gateway

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.docker/files/fastapi/: install.sh
.docker/images/fast_api/: dockerfile-api
.github/workflows/: ci.yml
api/: cli.py  main.py  schemas.py
api/data/: attack_technique_names.json
api/models/: attack_model.py  severity_model.py
api/routers/: classification_router.py
api/services/: classification_service.py
tests/: test_classification_api.py
